@@ -459,7 +459,7 @@ initcups (void)
   INT_CONSTANT (CUPS_PRINTER_AUTHENTICATED);
   INT_CONSTANT (CUPS_PRINTER_COMMANDS);
   INT_CONSTANT (CUPS_PRINTER_OPTIONS);
-#if CUPS_VERSION_MAJOR >= 1 && CUPS_VERSION_MINOR >= 3
+#if CUPS_VERSION_MAJOR > 1 || (CUPS_VERSION_MAJOR == 1 && CUPS_VERSION_MINOR >= 3)
   INT_CONSTANT (CUPS_PRINTER_DISCOVERED);
 #endif /* CUPS 1.3 */
 
@@ -584,7 +584,7 @@ initcups (void)
   STR_CONSTANT (CUPS_SERVER_REMOTE_PRINTERS);
   STR_CONSTANT (CUPS_SERVER_SHARE_PRINTERS);
   STR_CONSTANT (CUPS_SERVER_USER_CANCEL_ANY);
-#if CUPS_VERSION_MAJOR >= 1 && CUPS_VERSION_MINOR >= 3
+#if CUPS_VERSION_MAJOR > 1 || (CUPS_VERSION_MAJOR == 1 && CUPS_VERSION_MINOR >= 3)
   STR_CONSTANT (CUPS_SERVER_REMOTE_ANY);
 #endif /* CUPS 1.3 */
 
